Added VerifyPDF Route and function

--- a/templates/verifyPDF.html
+++ b/templates/verifyPDF.html
@@ -11,6 +11,12 @@
 <body>
 
     <form action="uploadVerifyPDF" method="POST" enctype="multipart/form-data">
+
+        <label for="prn">PRN: </label>
+        <input type="text" id="PRN" name="PRN">
+
+        <br> <br>
+
         <label for="PdfFile">File</label>
         <input type="file" id="PdfFile" name="PdfFile">
 
