--- a/templates/home.html
+++ b/templates/home.html
@@ -3,20 +3,62 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Flask Tutorial</title>
+    <title>CN Course Project</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+
 </head>
 
-<body>
-    <h1>Testing Form</h1>
-    <form action="/makePDF" method="POST">
-        <button type="submit">Make PDF</button>
-    </form>
+<body class="bg-dark">
 
-    <br><br>
+    <header class="p-3 text-bg-dark ">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <img src="https://icons.iconarchive.com/icons/dakirby309/simply-styled/256/Security-Approved-icon.png"
+                        alt="logo" width="50" height="50">
+                </a>
+                <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="/" class="nav-link px-2 text-white">Home</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
 
-    <form action="/verifyPDF" method="POST">
-        <button type="submit">Verify PDF</button>
-    </form>
+
+
+
+    <div class="bg-dark text-secondary px-4 py-5 text-center">
+        <div class="py-3">
+            <h1 class="display-5 fw-bold text-white">CN Course Project</h1>
+            <div class="col-lg-6 mx-auto">
+                <p class="fs-5 mb-4">This project is made to easily verify documents (PDF).</p>
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                    <a type="button" href="/makePDF" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Add
+                        Security to PDF</a>
+                    <a type="button" href="/verifyPDF" class="btn btn-outline-light btn-lg px-4">Verify your PDF</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="footer mt-auto py-3 bg-body-dark">
+        <div class="container text-center">
+            <img src="https://images.unsplash.com/photo-1618060931775-18ed14951776?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                alt="lock" width="380" height="auto">
+        </div>
+    </footer>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
