--- a/templates/makePDF.html
+++ b/templates/makePDF.html
@@ -6,32 +6,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Making PDF</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/makePDF.css') }}">
+
 </head>
 
-<body>
+<body class="bg-dark">
 
-    <form action="/formData" , method="POST" enctype="multipart/form-data">
-        <label for="prn">PRN: </label>
-        <input type="text" id="PRN" name="PRN">
+    <header class="p-3 text-bg-dark ">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <img src="https://icons.iconarchive.com/icons/dakirby309/simply-styled/256/Security-Approved-icon.png"
+                        alt="logo" width="50" height="50">
+                </a>
+                <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="/" class="nav-link px-2 text-white">Home</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
 
-        <br> <br>
+    <main class="form-signin w-100 m-auto ">
+        <form action="/formData" , method="POST" enctype="multipart/form-data">
+            <div class="text-center">
+                <img class="mb-4 "
+                    src="https://play-lh.googleusercontent.com/C33HqYgilwnqGsoPlEh_WzAlZIF2YrAkkdef_YEsILWbxGIG4UCzNTxF7iq9bzdxPw"
+                    alt="" width="72" height="70">
+            </div>
+            <h1 class="h3 mb-3 fw-normal text-center">Please fill details of the PDF</h1>
 
-        <label for="key">Key: </label>
-        <input type="text" id="ley" name="key">
+            <div class="form-floating">
+                <input type="text" class="form-control" id="PRN" name="PRN" placeholder="1211" required>
+                <label for="floatingInput">PRN</label>
+            </div>
+            <br>
+            <div class="form-floating">
+                <input type="number" class="form-control" id="key" name="key" placeholder="1211" min="1" max="40"
+                    required>
+                <label for="floatingInput">Key Length (eg. 10)</label>
+            </div>
+            <br>
+            <div class="mb-3">
+                <label for="formFile" class="form-label text">PDF File</label>
+                <input class="form-control" type="file" id="PdfFile" name="PdfFile">
+            </div>
+            <br>
+            <div class="form-floating">
+                <input type="text" class="form-control" id="newPdfName" name="newPdfName" placeholder="1211" required>
+                <label for="floatingInput">PDF Name</label>
+            </div>
+            <br>
 
-        <br> <br>
+            <div class="checkbox mb-3 text-center">
+                <label class="terms">
+                    <input type="checkbox" value="remember-me" required> You agree to the terms and conditions
+                </label>
+            </div>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Add Security</button>
+            <p class="mt-5 mb-3 text-body-secondary">© 2023</p>
+        </form>
+    </main>
 
-        <label for="PdfFile">File</label>
-        <input type="file" id="PdfFile" name="PdfFile">
 
-        <br><br>
 
-        <label for="newPdfName">PDF Name: </label>
-        <input type="text" id="newPdfName" name="newPdfName">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 
-        <br><br>
-        <button type="submit">Submit</button>
-    </form>
+
+
+
 
 </body>
 
