--- a/templates/security_data.html
+++ b/templates/security_data.html
@@ -6,14 +6,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/security_data.css') }}">
+
 </head>
 
-<body>
+<body class="bg-dark">
 
-    <h1>Data added for security in the PDF</h1>
-    <p> <strong> Key </strong> = {{keyData}}</p>
-    <p> <strong> Height & Width </strong> = {{heightData}} * {{widthData}}</p>
-    <p> <strong> Pages to which image is added </strong> = {{numData}} </p>
+    <header class="p-3 text-bg-dark ">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <img src="https://icons.iconarchive.com/icons/dakirby309/simply-styled/256/Security-Approved-icon.png"
+                        alt="logo" width="50" height="50">
+                </a>
+                <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="/" class="nav-link px-2 text-white">Home</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+
+    <div class="container col-xxl-12 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+            <div class="col-10 col-sm-8 col-lg-6">
+                <img src="https://images.unsplash.com/photo-1553484771-371a605b060b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                    class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+            </div>
+            <div class="col-lg-6">
+                <h1 class="text-light display-5 fw-bold lh-1 mb-3">Data added for security in the PDF</h1>
+                <p class="lead text-light"> <strong class="bg-danger"> Key </strong> = {{keyData}}</p>
+                <p class="lead text-light"> <strong class="bg-danger"> Height & Width </strong> = {{heightData}} *
+                    {{widthData}}</p>
+                <p class="lead text-light"> <strong class="bg-danger"> Pages to which image is added </strong> =
+                    {{numData}}</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                    <a type="button" href="/" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Home</a>
+                    <a type="button" href='/download'
+                        class="btn btn-outline-warning btn-lg px-4 me-sm-3 fw-bold">Download
+                        PDF</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 
 </body>
 
